objects/evt__Session_Assignment__c.object
<CustomObject>
    <customHelpPage>evt__EventManagementHelp</customHelpPage>
    <description>Used to keep track of special event sessions assigned to registrants.</description>
    <fields>
        <fullName>evt__Attendee_Name__c</fullName>
        <formula>evt__Attendee__r.evt__Contact__r.FirstName + &apos; &apos; +  evt__Attendee__r.evt__Contact__r.LastName</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>evt__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>evt__Attendee__c</referenceTo>
        <relationshipLabel>Session Assignments</relationshipLabel>
        <relationshipName>Session_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>evt__Event_Session__c</fullName>
        <label>Event Session</label>
        <referenceTo>evt__Session__c</referenceTo>
        <relationshipLabel>Session Assignments</relationshipLabel>
        <relationshipName>Session_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>evt__Order__c</fullName>
        <description>Display order for session assignments.  Copied from event session order field.</description>
        <inlineHelpText>Display order for session assignments.  Copied from event session order field.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>evt__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interested</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Session Assignment</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Session Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>